--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -616,7 +616,13 @@
       "image": [
         {{ seo_media | img_url: media_size | prepend: "https:" | json }}
       ],
-    {%- endif %}
+    {%- elsif product.selected_or_first_available_variant.featured_media -%}
+      {%- assign media_size = product.selected_or_first_available_variant.featured_media.preview_image.width | append: 'x' -%}
+      "image": {{ product.selected_or_first_available_variant.featured_media | img_url: media_size | prepend: "https:" | json }},
+    {% elsif product.featured_media %}
+      {%- assign media_size = product.featured_media.preview_image.width | append: 'x' -%}
+      "image": {{ product.featured_media | img_url: media_size | prepend: "https:" | json }},
+    {%- endif -%}
     "description": {{ product.description | strip_html | json }},
     {% if product.selected_or_first_available_variant.sku != blank -%}
       "sku": {{ product.selected_or_first_available_variant.sku | json }},
